feat: add endpoint getting secret questions and swagger dock for this
