# docs/swagger.json
@@ -8,7 +8,37 @@
     "host": "localhost:9000",
     "basePath": "/",
     "paths": {
-        "/v1/register/": {
+        "/v1/questions": {
+            "get": {
+                "description": "Get all secret questions",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "questions"
+                ],
+                "summary": "GetQuestions",
+                "operationId": "get-question",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.secretQuestionsResponseDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/register": {
             "post": {
                 "description": "Register new user",
                 "consumes": [
@@ -54,6 +84,17 @@
         }
     },
     "definitions": {
+        "entity.SecretQuestion": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "question": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.errResponse": {
             "type": "object",
             "properties": {
@@ -79,6 +120,17 @@
                 },
                 "secretQuestionID": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.secretQuestionsResponseDTO": {
+            "type": "object",
+            "properties": {
+                "questions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.SecretQuestion"
+                    }
                 }
             }
         }
