# internal/entity/secret_question.go
@@ -1,0 +1,8 @@
+package entity
+
+import "github.com/google/uuid"
+
+type SecretQuestion struct {
+	ID       uuid.UUID `json:"id"`
+	Question string    `json:"question"`
+}
